# bv-sdk-cli

./: .gitignore  README.md  pyproject.toml
_smoke_project/: bvproject.yaml  entry-points.json  input.json  main.py  pyproject.toml
_smoke_project/published/_smoke_project/0.0.1/: _smoke_project-0.0.1.bvpackage
_smoke_project/published/_smoke_project/0.0.2/: _smoke_project-0.0.2.bvpackage
backend/packaging/: bvpackage_validator.py
backend/tests/: test_bvpackage_contract.py
docs/: bv-package-contract-v1.md
random-user/: bvproject.yaml  main.py
src/bv/: __main__.py  cli.py
src/bv/auth/: __init__.py  context.py  login.py
src/bv/entrypoints/: registry.py
src/bv/orchestrator/: assets.py  client.py  queues.py
src/bv/packaging/: builder.py  bvpackage_validator.py
src/bv/project/: config.py  orchestrator.py
src/bv/runtime/: __init__.py  _guard.py  assets.py  logging.py  queues.py
src/bv/services/: commands.py
src/bv/tools/: lock_generator.py
src/bv/validators/: project_validator.py
tests/: test_auth_context.py  test_publish_orchestrator.py
